10 July 2015: Wouter
	- Renamed 'open resolvers' to 'relay resolvers' in the explanatory
	  text what dnssec-trigger is doing.  Resolvers from DHCP can also
	  be public resolvers, so the term relay resolver is used for an
	  open resolver that performs transport layer adjustment.

8 April 2015: Wouter
	- Patches from Tomas Hozza for dnssec-trigger-script:
	  Add newlines between classes to conform with PEP-8 and
	   increase readability.
	  Add/remove local zones in Unbound when configuring
	   reverse addr forward zones.

7 April 2015: Wouter
	- Patch from Tomas Hozza:
		dnssec-trigger-script: Don't configure RFC1918 zones
		if there are no global forwarders.

12 March 2015: Wouter
	- Patches from Tomas Hozza (7):
		dnssec-trigger-script: Fix wrong default value in configuration
		dnssec-trigger-script: Fix formatting errors
		dnssec-trigger-script: Remove unused class
		Allow to select the default Python interpretter during build
		Fix 01-dnssec-trigger NOT to hardcode shell path
		dnssec-trigger-script: Fix typo when adding search domains
		dnssec-trigger-control-setup: Use 3072 bit keys

26 January 2015: Wouter
	- Patches from Pavel Simerda:
		dnssec-trigger-script: check for paths, not files
			https://bugzilla.redhat.com/show_bug.cgi?id=1183975
		dnssec-trigger-script: fix secure/insecure forward zone
			switching
			https://bugzilla.redhat.com/show_bug.cgi?id=1185796
		dnssec.conf: clean up the dnssec.conf comments
		dnssec-trigger-script: log dnssec-trigger-control and
			unbound-control calls
		dnssec-trigger-script: use a global config object
		dnssec-trigger-script: add option to set search domains
			in /etc/resolv.conf
			https://bugzilla.redhat.com/show_bug.cgi?id=1130502
		dnssec-trigger-script: add (undocumented) option to avoid
			flushing positive answers
			https://bugzilla.redhat.com/show_bug.cgi?id=1105685
		dnssec-trigger-script: use private address ranges
			https://bugzilla.redhat.com/show_bug.cgi?id=1128310

21 January 2015: Wouter